add function findWeatherFollowRequestPaging